--- a/DV.html
+++ b/DV.html
@@ -15,8 +15,12 @@
 <td>大學</td>
 </tr>
 <tr>
-<td>學歷</td>
-<td>大學</td>
+<td>生日</td>
+<td>2000/06/22</td>
+</tr>
+<tr>
+<td>聯絡方式</td>
+<td>a24537698@gmail.com</td>
 </tr>
 </table>
 </body>
