--- a/DV.html
+++ b/DV.html
@@ -19,8 +19,16 @@
 <td>2000/06/22</td>
 </tr>
 <tr>
+<td>工作經驗</td>
+<td>早餐店</td>
+</tr>
+<tr>
 <td>聯絡方式</td>
 <td>a24537698@gmail.com</td>
+</tr>
+<tr>
+<td>電話</td>
+<td>0921661810</td>
 </tr>
 </table>
 </body>
