--- a/noan.html
+++ b/noan.html
@@ -5,5 +5,21 @@
 </head>
 <body>
 <img src= "noan1.png"/>
+<h1>諾安·逆旅</h1>
+<p><b>資料</b></p>
+<tr>
+<td>編號001</td>
+<td>“逆旅”這個機體名字是諾安自己起的，源自於他離開奧賽蘭姆號後，某位少年構造體告訴他的詩——天地一逆旅，同悲萬古塵。天地是一間廣闊的旅社，現在的軀體亦是如此，他將開始自己新的旅程，知道生命的終點。</td>	
+</tr>
+<tr>
+</tr>
+<tr>
+</tr>
+<tr>
+</tr>
+<tr>
+</tr>
+<tr>
+</tr>	
 </body>
 </html>
