--- a/noan.html
+++ b/noan.html
@@ -7,6 +7,7 @@
 <img src= "noan1.png"/>
 <h1>諾安·逆旅</h1>
 <p><b>資料</b></p>
+<table border="1">
 <tr>
 <td>編號001</td>
 <td>諾安的出現讓空中花園首次發現升格者能夠將人類改造為構造體，他也因為和升格者牽扯太深，處於在空中花園的監視之中，雖然本人對監視和需要配合研究檢查等事沒有任何怨言，但也會因為大多“知情者”對他保持著禮貌和距離而感到少許落寞。</td>	
