--- a/noan.html
+++ b/noan.html
@@ -31,6 +31,31 @@
 <tr>
 <td>編號006</td>
 <td>獨自從升格者的干擾和幻覺中脫離了出來，在後續監測中被認定為意識海穩定度已具備特化機體的適應性，這究竟是諾安原本就具有的特質，還是升格者乾涉的結果——科學理事會尚未得出結論。</td>
-</tr>	
+</tr>
+<p><b>資料</b></p>	
+<table border="2">
+<tr>
+<td>逆旅的秘密1</td>
+<td>小時候在存書倉庫裡看過大量漫畫，其中也包括一些稀奇古怪的內容，對各類作品接受程度都很高，尤其是同伴推薦的，一定會看完。</td>
+</tr>
+<tr>
+<td>逆旅的秘密2</td>
+<td>為了有充足的背包空間來運轉物資，他曾把一本夾著梨花的漫畫留在了075號城市，灰鴉小隊也正是在此地調查時發現了它——後來，這本書被他取回，並在210號城市重傷時遺失了。</td>
+</tr>
+<tr>
+<td>逆旅的秘密3</td>
+<td>有時還會夢到過去的事，但現在的諾安已經能迅速清醒過來，因為在這個夢中，他手中的發條螢火蟲還完好如初。</td>
+</tr>
+<tr>
+<td>逆旅的秘密4</td>
+<td>曾為了活下去自學了很多技能，種類繁多到難以逐個列出，唯獨廚藝很生疏，因為他在成為構造體之前都沒什麼必要，也沒條件把食物做得好吃，現在只要有食譜參照就能做出還不錯的東西，只是有時還會下意識想去吃切下來的邊角料，不捨得浪費。</td>
+</tr>
+<tr>
+<td>逆旅的秘密5</td>
+<td>不知所措的時候會一本正經地說些奇怪的玩笑話來轉移話題，常常因為表情太過正經而讓對方覺得他是認真的。在說很離譜的玩笑前，諾安會下意識先說一句“告訴你個秘密吧”，但對方要是真的相信了，他又很快會解釋——如果還有這個機會。</td>
+</tr>
+<td>逆旅的秘密6</td>
+<td>曾被運輸隊的同伴們稱讚過很會安慰人，因此時不時會被邀請酒桌之間陪著借酒消愁的人談心——就算諾安從不喝酒，甚至有些討厭菸酒的味道，他也不會只因為這一點就離開一個需要幫助和陪伴的人。</td>
+</tr>
 </body>
 </html>
