--- a/noan.html
+++ b/noan.html
@@ -6,8 +6,8 @@
 <body>
 <img src= "noan1.png"/>
 <h1>諾安·逆旅</h1>
-<p><b>資料</b>
-<table border="1">
+<p><b>資料</b></p>
+<p><table border="1">
 <tr>
 <td>編號001</td>
 <td>諾安的出現讓空中花園首次發現升格者能夠將人類改造為構造體，他也因為和升格者牽扯太深，處於在空中花園的監視之中，雖然本人對監視和需要配合研究檢查等事沒有任何怨言，但也會因為大多“知情者”對他保持著禮貌和距離而感到少許落寞。</td>	
@@ -32,7 +32,7 @@
 <td>編號006</td>
 <td>獨自從升格者的干擾和幻覺中脫離了出來，在後續監測中被認定為意識海穩定度已具備特化機體的適應性，這究竟是諾安原本就具有的特質，還是升格者乾涉的結果——科學理事會尚未得出結論。</td>
 </tr></p>
-<p><b>秘聞</b></p>	
+<h2><p><b>秘聞</b></p></h2>
 <table border="2">
 <tr>
 <td>逆旅的秘密1</td>
