--- a/noan.html
+++ b/noan.html
@@ -6,8 +6,10 @@
 <body>
 <img src= "noan1.png"/>
 <h1>諾安·逆旅</h1>
-<h2><b>資料</b></h2>
-<p><table border="1">
+<table border="1">
+<tr>
+<th>資料</th>
+</tr>
 <tr>
 <td>編號001</td>
 <td>諾安的出現讓空中花園首次發現升格者能夠將人類改造為構造體，他也因為和升格者牽扯太深，處於在空中花園的監視之中，雖然本人對監視和需要配合研究檢查等事沒有任何怨言，但也會因為大多“知情者”對他保持著禮貌和距離而感到少許落寞。</td>	
@@ -31,9 +33,11 @@
 <tr>
 <td>編號006</td>
 <td>獨自從升格者的干擾和幻覺中脫離了出來，在後續監測中被認定為意識海穩定度已具備特化機體的適應性，這究竟是諾安原本就具有的特質，還是升格者乾涉的結果——科學理事會尚未得出結論。</td>
-</tr></p>
-<h3><b>秘聞</b></h3>
-<p><table border="2">
+</tr>
+<table border="2">
+<tr>
+<th><b>秘聞</b></th>
+</tr>
 <tr>
 <td>逆旅的秘密1</td>
 <td>小時候在存書倉庫裡看過大量漫畫，其中也包括一些稀奇古怪的內容，對各類作品接受程度都很高，尤其是同伴推薦的，一定會看完。</td>
@@ -56,6 +60,6 @@
 </tr>
 <td>逆旅的秘密6</td>
 <td>曾被運輸隊的同伴們稱讚過很會安慰人，因此時不時會被邀請酒桌之間陪著借酒消愁的人談心——就算諾安從不喝酒，甚至有些討厭菸酒的味道，他也不會只因為這一點就離開一個需要幫助和陪伴的人。</td>
-</tr></p>
+</tr>
 </body>
 </html>
