--- a/noan.html
+++ b/noan.html
@@ -36,7 +36,7 @@
 </tr>
 <table border="2">
 <tr>
-<th><b>秘聞</b></th>
+<th>秘聞</th>
 </tr>
 <tr>
 <td>逆旅的秘密1</td>
@@ -61,5 +61,7 @@
 <td>逆旅的秘密6</td>
 <td>曾被運輸隊的同伴們稱讚過很會安慰人，因此時不時會被邀請酒桌之間陪著借酒消愁的人談心——就算諾安從不喝酒，甚至有些討厭菸酒的味道，他也不會只因為這一點就離開一個需要幫助和陪伴的人。</td>
 </tr>
+<b>秘聞</b>
+<h2>角色PV<a href="https://www.youtube.com/watch?v=5eRO7vcLq-U">腐朽為燈</a></h2>
 </body>
 </html>
