--- a/noan.html
+++ b/noan.html
@@ -34,6 +34,7 @@
 <td>編號006</td>
 <td>獨自從升格者的干擾和幻覺中脫離了出來，在後續監測中被認定為意識海穩定度已具備特化機體的適應性，這究竟是諾安原本就具有的特質，還是升格者乾涉的結果——科學理事會尚未得出結論。</td>
 </tr>
+</table>
 <table border="2">
 <tr>
 <th>秘聞</th>
@@ -61,6 +62,7 @@
 <td>逆旅的秘密6</td>
 <td>曾被運輸隊的同伴們稱讚過很會安慰人，因此時不時會被邀請酒桌之間陪著借酒消愁的人談心——就算諾安從不喝酒，甚至有些討厭菸酒的味道，他也不會只因為這一點就離開一個需要幫助和陪伴的人。</td>
 </tr>
+</table>
 <h3>角色PV<a href="https://www.youtube.com/watch?v=5eRO7vcLq-U">腐朽為燈</a></h3>
 </body>
 </html>
