--- a/noan.html
+++ b/noan.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 <title>noan</title>
+<style>
+body {background-image:url("noan2.png");}
+</style>
 </head>
 <body>
 <img src= "noan1.png"/>
