--- a/noan.html
+++ b/noan.html
@@ -14,28 +14,28 @@ body {background-image:url("noan2.png");}
 <th>資料</th>
 </tr>
 <tr>
-<td>編號001</td>
-<td>諾安的出現讓空中花園首次發現升格者能夠將人類改造為構造體，他也因為和升格者牽扯太深，處於在空中花園的監視之中，雖然本人對監視和需要配合研究檢查等事沒有任何怨言，但也會因為大多“知情者”對他保持著禮貌和距離而感到少許落寞。</td>	
+<td><b>編號001</b></td>
+<td><b>諾安的出現讓空中花園首次發現升格者能夠將人類改造為構造體，他也因為和升格者牽扯太深，處於在空中花園的監視之中，雖然本人對監視和需要配合研究檢查等事沒有任何怨言，但也會因為大多“知情者”對他保持著禮貌和距離而感到少許落寞。</b></td>	
 </tr>
 <tr>
-<td>編號002</td>
-<td>“逆旅”這個機體名字是諾安自己起的，源自於他離開奧賽蘭姆號後，某位少年構造體告訴他的詩——天地一逆旅，同悲萬古塵。天地是一間廣闊的旅社，現在的軀體亦是如此，他將開始自己新的旅程，知道生命的終點。</td>
+<td><b>編號002</b></td>
+<td><b>“逆旅”這個機體名字是諾安自己起的，源自於他離開奧賽蘭姆號後，某位少年構造體告訴他的詩——天地一逆旅，同悲萬古塵。天地是一間廣闊的旅社，現在的軀體亦是如此，他將開始自己新的旅程，知道生命的終點。</b></td>
 </tr>
 <tr>
-<td>編號003</td>
-<td>試用塗裝之後曾再一次認真考慮過要不要染成彩虹色頭髮，但收到了寒羊小隊成員一致反對和藝術協會會長艾倫的銳評“這種表達有些抽象”，於是他保留了頭上這幾縷沒有被染黑的白髮，權當是最後的倔強。</td>
+<td><b>編號003</b></td>
+<td><b>試用塗裝之後曾再一次認真考慮過要不要染成彩虹色頭髮，但收到了寒羊小隊成員一致反對和藝術協會會長艾倫的銳評“這種表達有些抽象”，於是他保留了頭上這幾縷沒有被染黑的白髮，權當是最後的倔強。</b></td>
 </tr>
 <tr>
-<td>編號004</td>
-<td>左右手都能熟練地使用武器和寫字，但不太擅長過於沉重的武器，並非力量不足，而是更習慣輕盈和迅捷的戰斗方式。釋能劍的設計圖是蕾切爾送給諾安的17歲生日禮物，而副手的另一把劍則是他加入運輸隊後就一直在使用的武器，得到釋能劍前，諾安慣用的武器是槍和劍的組合。</td>
+<td><b>編號004</b></td>
+<td><b>左右手都能熟練地使用武器和寫字，但不太擅長過於沉重的武器，並非力量不足，而是更習慣輕盈和迅捷的戰斗方式。釋能劍的設計圖是蕾切爾送給諾安的17歲生日禮物，而副手的另一把劍則是他加入運輸隊後就一直在使用的武器，得到釋能劍前，諾安慣用的武器是槍和劍的組合。</b></td>
 </tr>
 <tr>
-<td>編號005</td>
-<td>遠程武器熟練度不高，就算以前常用槍械，槍法也算不上太準，只是有時會歪打正著，命中意想不到的重要目標——例如某次戰鬥中，他的子彈穿過3扇窗戶擊中了對面大樓的廣告燈牌，使其掉下來砸中了劫匪的首領。</td>
+<td><b>編號005</b></td>
+<td><b>遠程武器熟練度不高，就算以前常用槍械，槍法也算不上太準，只是有時會歪打正著，命中意想不到的重要目標——例如某次戰鬥中，他的子彈穿過3扇窗戶擊中了對面大樓的廣告燈牌，使其掉下來砸中了劫匪的首領。</b></td>
 </tr>
 <tr>
-<td>編號006</td>
-<td>獨自從升格者的干擾和幻覺中脫離了出來，在後續監測中被認定為意識海穩定度已具備特化機體的適應性，這究竟是諾安原本就具有的特質，還是升格者乾涉的結果——科學理事會尚未得出結論。</td>
+<td><b>編號006</b></td>
+<td><b>獨自從升格者的干擾和幻覺中脫離了出來，在後續監測中被認定為意識海穩定度已具備特化機體的適應性，這究竟是諾安原本就具有的特質，還是升格者乾涉的結果——科學理事會尚未得出結論。</b></td>
 </tr>
 </table>
 <table border="2">
@@ -43,27 +43,27 @@ body {background-image:url("noan2.png");}
 <th>秘聞</th>
 </tr>
 <tr>
-<td>逆旅的秘密1</td>
-<td>小時候在存書倉庫裡看過大量漫畫，其中也包括一些稀奇古怪的內容，對各類作品接受程度都很高，尤其是同伴推薦的，一定會看完。</td>
+<td><b>逆旅的秘密1</b></td>
+<td><b>小時候在存書倉庫裡看過大量漫畫，其中也包括一些稀奇古怪的內容，對各類作品接受程度都很高，尤其是同伴推薦的，一定會看完。</b></td>
 </tr>
 <tr>
-<td>逆旅的秘密2</td>
-<td>為了有充足的背包空間來運轉物資，他曾把一本夾著梨花的漫畫留在了075號城市，灰鴉小隊也正是在此地調查時發現了它——後來，這本書被他取回，並在210號城市重傷時遺失了。</td>
+<td><b>逆旅的秘密2</b></td>
+<td><b>為了有充足的背包空間來運轉物資，他曾把一本夾著梨花的漫畫留在了075號城市，灰鴉小隊也正是在此地調查時發現了它——後來，這本書被他取回，並在210號城市重傷時遺失了。</b></td>
 </tr>
 <tr>
-<td>逆旅的秘密3</td>
-<td>有時還會夢到過去的事，但現在的諾安已經能迅速清醒過來，因為在這個夢中，他手中的發條螢火蟲還完好如初。</td>
+<td><b>逆旅的秘密3</b></td>
+<td><b>有時還會夢到過去的事，但現在的諾安已經能迅速清醒過來，因為在這個夢中，他手中的發條螢火蟲還完好如初。</b></td>
 </tr>
 <tr>
-<td>逆旅的秘密4</td>
-<td>曾為了活下去自學了很多技能，種類繁多到難以逐個列出，唯獨廚藝很生疏，因為他在成為構造體之前都沒什麼必要，也沒條件把食物做得好吃，現在只要有食譜參照就能做出還不錯的東西，只是有時還會下意識想去吃切下來的邊角料，不捨得浪費。</td>
+<td><b>逆旅的秘密4</b></td>
+<td><b>曾為了活下去自學了很多技能，種類繁多到難以逐個列出，唯獨廚藝很生疏，因為他在成為構造體之前都沒什麼必要，也沒條件把食物做得好吃，現在只要有食譜參照就能做出還不錯的東西，只是有時還會下意識想去吃切下來的邊角料，不捨得浪費。</b></td>
 </tr>
 <tr>
-<td>逆旅的秘密5</td>
-<td>不知所措的時候會一本正經地說些奇怪的玩笑話來轉移話題，常常因為表情太過正經而讓對方覺得他是認真的。在說很離譜的玩笑前，諾安會下意識先說一句“告訴你個秘密吧”，但對方要是真的相信了，他又很快會解釋——如果還有這個機會。</td>
+<td><b>逆旅的秘密5</b></td>
+<td><b>不知所措的時候會一本正經地說些奇怪的玩笑話來轉移話題，常常因為表情太過正經而讓對方覺得他是認真的。在說很離譜的玩笑前，諾安會下意識先說一句“告訴你個秘密吧”，但對方要是真的相信了，他又很快會解釋——如果還有這個機會。</b></td>
 </tr>
-<td>逆旅的秘密6</td>
-<td>曾被運輸隊的同伴們稱讚過很會安慰人，因此時不時會被邀請酒桌之間陪著借酒消愁的人談心——就算諾安從不喝酒，甚至有些討厭菸酒的味道，他也不會只因為這一點就離開一個需要幫助和陪伴的人。</td>
+<td><b>逆旅的秘密6</b></td>
+<td><b>曾被運輸隊的同伴們稱讚過很會安慰人，因此時不時會被邀請酒桌之間陪著借酒消愁的人談心——就算諾安從不喝酒，甚至有些討厭菸酒的味道，他也不會只因為這一點就離開一個需要幫助和陪伴的人。</b></td>
 </tr>
 </table>
 <h3>角色PV<a href="https://www.youtube.com/watch?v=5eRO7vcLq-U">腐朽為燈</a></h3>
