--- a/noan.html
+++ b/noan.html
@@ -62,8 +62,34 @@ body {background-image:url("noan2.png");}
 <td><b>逆旅的秘密5</b></td>
 <td><b>不知所措的時候會一本正經地說些奇怪的玩笑話來轉移話題，常常因為表情太過正經而讓對方覺得他是認真的。在說很離譜的玩笑前，諾安會下意識先說一句“告訴你個秘密吧”，但對方要是真的相信了，他又很快會解釋——如果還有這個機會。</b></td>
 </tr>
+<tr>
 <td><b>逆旅的秘密6</b></td>
 <td><b>曾被運輸隊的同伴們稱讚過很會安慰人，因此時不時會被邀請酒桌之間陪著借酒消愁的人談心——就算諾安從不喝酒，甚至有些討厭菸酒的味道，他也不會只因為這一點就離開一個需要幫助和陪伴的人。</b></td>
+</tr>
+<tr>
+<td><b>逆旅的秘密7</b></td>
+<td><b>不太擅長應對別人的眼淚也不太能分辨出對方是不是在假哭，遇到正在哭泣的人，雖然表面還能保持冷靜其實心裡會慌起來，並且不自覺地答應一些平時不會答應的請求。
+</b></td>
+</tr>
+<tr>
+<td><b>逆旅的秘密8</b></td>
+<td><b>如果有來世，諾安想變成海鷗。但其實在成為構造體之前，他既沒有見過海，也沒見過海鷗。</b></td>
+</tr>
+<tr>
+<td><b>逆旅的秘密9</b></td>
+<td><b>13歲之前在N列平民車廂是出了名的倔小孩，因為幾次魯莽的抗爭，被人在背後起了一個外號叫做“刺板栗”，但由於本人沒有見過板栗的刺殼也沒見過被板栗刺傷的人，根本沒察覺到是在叫他。</b></td>
+</tr>
+<tr>
+<td><b>逆旅的秘密10</b></td>
+<td><b>諾安對大部分顏色都沒有什麼偏好，但他喜歡某些白色且乾淨的東西，例如白色的紡織物，飛鳥自然脫落的白羽，晴天的雲，整潔的紙張......在這些潔白中，他唯獨不喜歡雪，尤其不喜歡一望無際的雪原。</b></td>
+</tr>
+<tr>
+<td><b>逆旅的秘密11</b></td>
+<td><b>雖然很容易親近，身為人類時也有很多要好的同伴，但感情深厚的朋友卻很少。對待感情有些遲鈍和被動，基本上不會在剛認識沒多久的時候就付出自己所有的衝動和熱情，熟悉對方的步調之後才會產生想要更接近對方的想法。</b></td>
+</tr>
+<tr>
+<td><b>逆旅的秘密12</b></td>
+<td><b>對關係好的同伴會坦率地訴說自己的真實感情，察覺到有些話會引起對方有趣的反應時，偶爾也想通過這些話來惡作劇，深知自己心底還留著孩子氣，但對朋友完全沒有遮掩這點的打算。</b></td>
 </tr>
 </table>
 <h3>角色PV<a href="https://www.youtube.com/watch?v=5eRO7vcLq-U">腐朽為燈</a></h3>
