--- a/pgr.html
+++ b/pgr.html
@@ -9,6 +9,12 @@ background-attachment:fixed;}
 </style>
 </head>
 <body>
+<table border="1">
+<caption>版本PV</caption>
+<tr>
+<th>黑星墜落</th>
+<td><img src= "pgr1.jpg" width="192" height="108" /></td>
+</tr>
 
 </body>
 </html>
