--- a/pgr.html
+++ b/pgr.html
@@ -21,7 +21,7 @@ background-attachment:fixed;}
 </tr>
 <tr>
 <th>九龍夜航</th>
-<td><img src= "pg3.jpg" width="384" height="216" /></td>
+<td><img src= "pgr3.jpg" width="384" height="216" /></td>
 </tr>
 <tr>
 <th>九龍環城</th>
