--- a/pgr.html
+++ b/pgr.html
@@ -12,7 +12,7 @@ background-attachment:fixed;}
 <table border="1">
 <caption>版本PV</caption>
 <tr>
-<th>黑星墜落</th>
+<th><a href="https://www.youtube.com/watch?v=xCykq4r7ExI" target="_blank">黑星墜落</a></th>
 <td><img src= "pgr1.jpg" width="384" height="216" /></td>
 </tr>
 <tr>
