--- a/pgr.html
+++ b/pgr.html
@@ -16,80 +16,80 @@ background-attachment:fixed;}
 <td><img src= "pgr1.jpg" width="384" height="216" /></td>
 </tr>
 <tr>
-<th>永久列車</th>
+<th><a href="https://www.youtube.com/watch?v=rOzWiOe4N2U" target="_blank">永久列車</a></th>
 <td><img src= "pgr2.jpg" width="384" height="216" /></td>
 </tr>
 <tr>
-<th>九龍夜航</th>
+<th><a href="https://www.youtube.com/watch?v=y7oklJRcdnM&t=6s" target="_blank">九龍夜航</a></th>
 <td><img src= "pgr3.jpg" width="384" height="216" /></td>
 </tr>
 <tr>
-<th>九龍環城</th>
+<th><a href="https://www.youtube.com/watch?v=uh8EkhG4O4A" target="_blank">九龍環城</a></th>
 <td><img src= "pgr4.jpg" width="384" height="216" /></td>
 </tr>
 <tr>
 <th><tr>
-<th>湛藍曙日</th>
+<th><a href="https://www.youtube.com/watch?v=7iA7NU-3f_M&list=PL6K5X7VdgRjkxpNASD4XsmaHBpIACzMgl&index=15&t=133s" target="_blank">湛藍曙日</a></th>
 <td><img src= "pgr5.jpg" width="384" height="216" /></td>
 </tr>
 <tr>
-<th>重返極夜</th>
+<th><a href="https://www.youtube.com/watch?v=5gQxuUyKVbM&list=PL6K5X7VdgRjkxpNASD4XsmaHBpIACzMgl&index=16&t=19s" target="_blank">重返極夜</a></th>
 <td><img src= "pgr6.jpg" width="384" height="216" /></td>
 </tr>
 <tr>
-<th>古銘遺章</th>
+<th><a href="https://www.youtube.com/watch?v=olAFzRb2z5I&list=PL6K5X7VdgRjkxpNASD4XsmaHBpIACzMgl&index=18&t=38s" target="_blank">古銘遺章</a></th>
 <td><img src= "pgr7.jpg" width="384" height="216" /></td>
 </tr>
 <tr>
-<th>終焉福音</th>
+<th><a href="https://www.youtube.com/watch?v=9tt51CQYnIk&list=PL6K5X7VdgRjkxpNASD4XsmaHBpIACzMgl&index=20&t=75s" target="_blank">終焉福音</a></th>
 <td><img src= "pgr8.jpg" width="384" height="216" /></td>
 </tr>
 <tr>
-<th>詠嘆回聲</th>
+<th><a href="https://www.youtube.com/watch?v=VO1s1qm-brQ&list=PL6K5X7VdgRjkxpNASD4XsmaHBpIACzMgl&index=23&t=38s" target="_blank">詠嘆回聲</a></th>
 <td><img src= "pgr9.jpg" width="384" height="216" /></td>
 </tr>
 <tr>
-<th>視線囚籠</th>
+<th><a href="https://www.youtube.com/watch?v=sLgcuwU5L38&list=PL6K5X7VdgRjkxpNASD4XsmaHBpIACzMgl&index=24" target="_blank">視線囚籠</a></th>
 <td><img src= "pgr10.jpg" width="384" height="216" /></td>
 </tr>
 <tr>
-<th>迷境刻痕</th>
+<th><a href="https://www.youtube.com/watch?v=Dz34hN7YlEQ&list=PL6K5X7VdgRjkxpNASD4XsmaHBpIACzMgl&index=27&t=11s" target="_blank">迷境刻痕</a></th>
 <td><img src= "pgr11.jpg" width="384" height="216" /></td>
 </tr>
 <tr>
-<th>絕海星火</th>
+<th><a href="https://www.youtube.com/watch?v=Jb-y_WVjYek&list=PL6K5X7VdgRjkxpNASD4XsmaHBpIACzMgl&index=29&t=1s" target="_blank">絕海星火</a></th>
 <td><img src= "pgr12.jpg" width="384" height="216" /></td>
 </tr>
 <tr>
-<th>永夜胎動</th>
+<th><a href="https://www.youtube.com/watch?v=jkKFETmF3uQ&list=PL6K5X7VdgRjkxpNASD4XsmaHBpIACzMgl&index=31&t=85s" target="_blank">永夜胎動</a></th>
 <td><img src= "pgr13.jpg" width="384" height="216" /></td>
 </tr>
 <tr>
-<th>湮滅殘晝</th>
+<th><a href="https://www.youtube.com/watch?v=40oSh4DYbvo&list=PL6K5X7VdgRjkxpNASD4XsmaHBpIACzMgl&index=32&t=154s" target="_blank">湮滅殘晝</a></th>
 <td><img src= "pgr14.jpg" width="384" height="216" /></td>
 </tr>
 <tr>
-<th>宣敘妄響</th>
+<th><a href="https://www.youtube.com/watch?v=MxMXCJafl40&list=PL6K5X7VdgRjkxpNASD4XsmaHBpIACzMgl&index=33&t=79s" target="_blank">宣敘妄響</a></th>
 <td><img src= "pgr15.jpg" width="384" height="216" /></td>
 </tr>
 <tr>
-<th>遊雲鯨夢</th>
+<th><a href="https://www.youtube.com/watch?v=NLa9jMN6M5o&list=PL6K5X7VdgRjkxpNASD4XsmaHBpIACzMgl&index=34" target="_blank">遊雲鯨夢</a></th>
 <td><img src= "pgr16.jpg" width="384" height="216" /></td>
 </tr>
 <tr>
-<th>曙星致意</th>
+<th><a href="https://www.youtube.com/watch?v=SeFOB5ckN_8&list=PL6K5X7VdgRjkxpNASD4XsmaHBpIACzMgl&index=36" target="_blank">曙星致意</a></th>
 <td><img src= "pgr17.jpg" width="384" height="216" /></td>
 </tr>
 <tr>
-<th>遙岸方舟</th>
+<th><a href="https://www.youtube.com/watch?v=Gq84w5SabHg&list=PL6K5X7VdgRjkxpNASD4XsmaHBpIACzMgl&index=38&t=16s" target="_blank">遙岸方舟</a></th>
 <td><img src= "pgr18.jpg" width="384" height="216" /></td>
 </tr>
 <tr>
-<th>空曉界限</th>
+<th><a href="https://www.youtube.com/watch?v=pm_QWPO2tdo&list=PL6K5X7VdgRjkxpNASD4XsmaHBpIACzMgl&index=40&t=90s" target="_blank">空曉界限</a></th>
 <td><img src= "pgr19.jpg" width="384" height="216" /></td>
 </tr>
 <tr>
-<th>枯朽為燈</th>
+<th><a href="https://www.youtube.com/watch?v=2IICJqcfR94&list=PL6K5X7VdgRjkxpNASD4XsmaHBpIACzMgl&index=41" target="_blank">枯朽為燈</a></th>
 <td><img src= "pgr20.jpg" width="384" height="216" /></td>
 </tr>
 
