--- a/pgr.html
+++ b/pgr.html
@@ -9,6 +9,11 @@ background-attachment:fixed;}
 </style>
 </head>
 <body>
+<h1>戰雙帕彌什</h1>
+<h2>故事梗概</h2>
+<p>聚變技術使人類進入了高度聯合且飛速發展的黃金時代。但由於人類對基礎科學的究極探索終於觸碰到禁忌領域，象徵着「懲罰（punishing）」的「帕彌什」的病毒突然爆發。
+人類脆弱的肉體被病毒迅速破壞，而被感染的機械則被病毒操控，化身為狂暴的屠戮機器。
+在經歷了不到一個世紀的反抗之後，曾經高度繁榮的人類文明在地球上幾乎失去了痕跡。倖存者流亡深空，作為替代的是無數在大地上游蕩着的機械感染體。</p>
 <table border="1">
 <caption>版本PV</caption>
 <tr>
