--- a/pgr.html
+++ b/pgr.html
@@ -14,6 +14,13 @@ background-attachment:fixed;}
 <p>聚變技術使人類進入了高度聯合且飛速發展的黃金時代。但由於人類對基礎科學的究極探索終於觸碰到禁忌領域，象徵着「懲罰（punishing）」的「帕彌什」的病毒突然爆發。
 人類脆弱的肉體被病毒迅速破壞，而被感染的機械則被病毒操控，化身為狂暴的屠戮機器。
 在經歷了不到一個世紀的反抗之後，曾經高度繁榮的人類文明在地球上幾乎失去了痕跡。倖存者流亡深空，作為替代的是無數在大地上游蕩着的機械感染體。</p>
+<h2>帕彌什</h2>
+<p>能夠同時感染機械與人類的病毒，其導致了地球的淪陷，迫使大部分人類不得不移居至空中花園。
+
+「最初，帕彌什病毒以極高的密度從人類第一座零點能反應堆的真空腔體中現身。
+在其不斷進行質量展開的過程中，引發了泄露爆炸，使其隨大氣環流最終蔓延至全球。
+帕彌什病毒能夠直接破壞生物體細胞，或通過操控邏輯電路使機械體呈現被感染狀態。
+並對任何具有人類意識行為的個體，展現出極其強烈的攻擊欲望。」</p>
 <table border="1">
 <caption>版本PV</caption>
 <tr>
