--- a/e.html
+++ b/e.html
@@ -6,7 +6,7 @@
 
 <p id="demo">JavaScript can change HTML content.</p>
 
-<button type="button" onclick="document.getElementById('demo').innerHTML = 'HelloJavaScript!'">Click Me!</button>
+<button type="button" onclick="document.getElementById('demo').innerHTML = 'HelloJavaScript!'">123</button>
 
 </body>
 </html>
