--- a/noanone.html
+++ b/noanone.html
@@ -18,8 +18,8 @@ body {background-image:url("noan2.png");}
 <td><b id="demo" style="display:none">諾安的出現讓空中花園首次發現升格者能夠將人類改造為構造體，他也因為和升格者牽扯太深，處於在空中花園的監視之中，雖然本人對監視和需要配合研究檢查等事沒有任何怨言，但也會因為大多“知情者”對他保持著禮貌和距離而感到少許落寞。</b></td>	
 </tr>
 <tr>
-<td><b>編號002</b></td>
-<td><b>“逆旅”這個機體名字是諾安自己起的，源自於他離開奧賽蘭姆號後，某位少年構造體告訴他的詩——天地一逆旅，同悲萬古塵。天地是一間廣闊的旅社，現在的軀體亦是如此，他將開始自己新的旅程，知道生命的終點。</b></td>
+<td><b><button type="button" onclick="document.getElementById('a').style.display='block'">編號002</button></b></td>
+<td><b><b id="a" style="display:none">“逆旅”這個機體名字是諾安自己起的，源自於他離開奧賽蘭姆號後，某位少年構造體告訴他的詩——天地一逆旅，同悲萬古塵。天地是一間廣闊的旅社，現在的軀體亦是如此，他將開始自己新的旅程，知道生命的終點。</b></td>
 </tr>
 <tr>
 <td><b>編號003</b></td>
