--- a/noanone.html
+++ b/noanone.html
@@ -22,20 +22,20 @@ body {background-image:url("noan2.png");}
 <td><b><b id="a" style="display:none">“逆旅”這個機體名字是諾安自己起的，源自於他離開奧賽蘭姆號後，某位少年構造體告訴他的詩——天地一逆旅，同悲萬古塵。天地是一間廣闊的旅社，現在的軀體亦是如此，他將開始自己新的旅程，知道生命的終點。</b></td>
 </tr>
 <tr>
-<td><b>編號003</b></td>
-<td><b>試用塗裝之後曾再一次認真考慮過要不要染成彩虹色頭髮，但收到了寒羊小隊成員一致反對和藝術協會會長艾倫的銳評“這種表達有些抽象”，於是他保留了頭上這幾縷沒有被染黑的白髮，權當是最後的倔強。</b></td>
+<td><b><button type="button" onclick="document.getElementById('b').style.display='block'">編號003</button></b></td>
+<td><b><b id="b" style="display:none">試用塗裝之後曾再一次認真考慮過要不要染成彩虹色頭髮，但收到了寒羊小隊成員一致反對和藝術協會會長艾倫的銳評“這種表達有些抽象”，於是他保留了頭上這幾縷沒有被染黑的白髮，權當是最後的倔強。</b></td>
 </tr>
 <tr>
-<td><b>編號004</b></td>
-<td><b>左右手都能熟練地使用武器和寫字，但不太擅長過於沉重的武器，並非力量不足，而是更習慣輕盈和迅捷的戰斗方式。釋能劍的設計圖是蕾切爾送給諾安的17歲生日禮物，而副手的另一把劍則是他加入運輸隊後就一直在使用的武器，得到釋能劍前，諾安慣用的武器是槍和劍的組合。</b></td>
+<td><b><button type="button" onclick="document.getElementById('c').style.display='block'">編號004</button></b></td>
+<td><b><b id="c" style="display:none">左右手都能熟練地使用武器和寫字，但不太擅長過於沉重的武器，並非力量不足，而是更習慣輕盈和迅捷的戰斗方式。釋能劍的設計圖是蕾切爾送給諾安的17歲生日禮物，而副手的另一把劍則是他加入運輸隊後就一直在使用的武器，得到釋能劍前，諾安慣用的武器是槍和劍的組合。</b></td>
 </tr>
 <tr>
-<td><b>編號005</b></td>
-<td><b>遠程武器熟練度不高，就算以前常用槍械，槍法也算不上太準，只是有時會歪打正著，命中意想不到的重要目標——例如某次戰鬥中，他的子彈穿過3扇窗戶擊中了對面大樓的廣告燈牌，使其掉下來砸中了劫匪的首領。</b></td>
+<td><b><button type="button" onclick="document.getElementById('v').style.display='block'">編號005</button></b></td>
+<td><b><b id="v" style="display:none">遠程武器熟練度不高，就算以前常用槍械，槍法也算不上太準，只是有時會歪打正著，命中意想不到的重要目標——例如某次戰鬥中，他的子彈穿過3扇窗戶擊中了對面大樓的廣告燈牌，使其掉下來砸中了劫匪的首領。</b></td>
 </tr>
 <tr>
-<td><b>編號006</b></td>
-<td><b>獨自從升格者的干擾和幻覺中脫離了出來，在後續監測中被認定為意識海穩定度已具備特化機體的適應性，這究竟是諾安原本就具有的特質，還是升格者乾涉的結果——科學理事會尚未得出結論。</b></td>
+<td><b><button type="button" onclick="document.getElementById('z').style.display='block'">編號006</button></b></td>
+<td><b><b id="z" style="display:none">獨自從升格者的干擾和幻覺中脫離了出來，在後續監測中被認定為意識海穩定度已具備特化機體的適應性，這究竟是諾安原本就具有的特質，還是升格者乾涉的結果——科學理事會尚未得出結論。</b></td>
 </tr>
 </table>
 <table border="2">
