--- a/noanone.html
+++ b/noanone.html
@@ -93,5 +93,8 @@ body {background-image:url("noan2.png");}
 </tr>
 </table>
 <h3>角色PV<a href="https://www.youtube.com/watch?v=5eRO7vcLq-U">腐朽為燈</a></h3>
+<script>
+alert("逆旅 資料");
+</script>
 </body>
 </html>
