--- a/Lanyin.html
+++ b/Lanyin.html
@@ -3,7 +3,7 @@
 <head>
 <title>selena</title>
 <style>
-body {background-image:url("se.png");}
+body {background-image:url("se.jpeg");}
 </style>
 </head>
 <body>
@@ -13,9 +13,7 @@ body {background-image:url("se.png");}
 <td>假使萬神廟至今仍然存在於世，大概也不過如此。</td>	
 </tr>
 <tr>
-<td><b>編號002</b></td>
-<td><b>“逆旅”這個機體名字是諾安自己起的，源自於他離開奧賽蘭姆號後，某位少年構造體告訴他的詩——天地一逆旅，同悲萬古塵。天地是一間廣闊的旅社，現在的軀體亦是如此，他將開始自己新的旅程，知道生命的終點。</b></td>
-</tr>
+<td><b><button type="button" onclick="document.getElementById('demo').style.display='block'">編號001</button></b><b id="demo" style="display:none">諾安的出現讓空中花園首次發現升格者能夠將人類改造為構造體，他也因為和升格者牽扯太深，處於在空中花園的監視之中，雖然本人對監視和需要配合研究檢查等事沒有任何怨言，但也會因為大多“知情者”對他保持著禮貌和距離而感到少許落寞。</b></td>	
 <tr>
 <td><b>編號003</b></td>
 <td><b>試用塗裝之後曾再一次認真考慮過要不要染成彩虹色頭髮，但收到了寒羊小隊成員一致反對和藝術協會會長艾倫的銳評“這種表達有些抽象”，於是他保留了頭上這幾縷沒有被染黑的白髮，權當是最後的倔強。</b></td>
