--- a/Lanyin.html
+++ b/Lanyin.html
@@ -3,7 +3,12 @@
 <head>
 <title>selena</title>
 <style>
-body {background-image:url("se.jpeg");}
+body
+{
+background-image:url("se.jpeg");
+background-repeat:no-repeat;
+background-size:cover;
+}
 </style>
 </head>
 <body>
