--- a/Lanyin.html
+++ b/Lanyin.html
@@ -14,81 +14,20 @@ background-size:cover;
 <body>
 <h1>“圖蘭朵”</h1>
 <table border="1">
+<tr><td>假使萬神廟至今仍然存在於世，大概也不過如此。</td></tr>
+<tr><td>恢弘的穹頂上吊著一盞華麗而浮誇的巨型水晶燈，光芒透過數次折射，照亮了上面繪製的那副《末日審判》</td></tr>
+<tr><td>無人知曉那和真跡是否有所差異，也無人在乎它的細節是否符合文獻中的記載。</td></tr>
+<tr><td>它只需要存在於那裡，就跟那些雕刻著《神曲》一幕幕畫面的立柱一樣，為這份極致的輝煌和壯闊添磚加瓦</td></tr>
+<tr><td>到處都是難以用言語去描繪的浮華，這恐怕是存在於這個世界上的最後一個，同時也是最為夢幻的歌劇院。</td></tr>
+<tr><td>這樣的地方就存在於空中花園，就存在於這座人類最後的伊甸。</td></tr>
 <tr>
-<td>假使萬神廟至今仍然存在於世，大概也不過如此。</td>	
-</tr>
+<td><b><button type="button" onclick="document.getElementById('demo').style.display='block'">演員</button></b><b id="demo" style="display:none">再見了，我親愛的同胞。</b></td>	
 <tr>
-<td><b><button type="button" onclick="document.getElementById('demo').style.display='block'">編號001</button></b><b id="demo" style="display:none">諾安的出現讓空中花園首次發現升格者能夠將人類改造為構造體，他也因為和升格者牽扯太深，處於在空中花園的監視之中，雖然本人對監視和需要配合研究檢查等事沒有任何怨言，但也會因為大多“知情者”對他保持著禮貌和距離而感到少許落寞。</b></td>	
 <tr>
-<td><b>編號003</b></td>
-<td><b>試用塗裝之後曾再一次認真考慮過要不要染成彩虹色頭髮，但收到了寒羊小隊成員一致反對和藝術協會會長艾倫的銳評“這種表達有些抽象”，於是他保留了頭上這幾縷沒有被染黑的白髮，權當是最後的倔強。</b></td>
-</tr>
+<td><b><button type="button" onclick="document.getElementById('demo').style.display='block'">演員</button></b><b id="demo" style="display:none">願你們的未來，充滿愛和光明。
+</b></td>	
 <tr>
-<td><b>編號004</b></td>
-<td><b>左右手都能熟練地使用武器和寫字，但不太擅長過於沉重的武器，並非力量不足，而是更習慣輕盈和迅捷的戰斗方式。釋能劍的設計圖是蕾切爾送給諾安的17歲生日禮物，而副手的另一把劍則是他加入運輸隊後就一直在使用的武器，得到釋能劍前，諾安慣用的武器是槍和劍的組合。</b></td>
-</tr>
-<tr>
-<td><b>編號005</b></td>
-<td><b>遠程武器熟練度不高，就算以前常用槍械，槍法也算不上太準，只是有時會歪打正著，命中意想不到的重要目標——例如某次戰鬥中，他的子彈穿過3扇窗戶擊中了對面大樓的廣告燈牌，使其掉下來砸中了劫匪的首領。</b></td>
-</tr>
-<tr>
-<td><b>編號006</b></td>
-<td><b>獨自從升格者的干擾和幻覺中脫離了出來，在後續監測中被認定為意識海穩定度已具備特化機體的適應性，這究竟是諾安原本就具有的特質，還是升格者乾涉的結果——科學理事會尚未得出結論。</b></td>
-</tr>
-</table>
-<table border="2">
-<tr>
-<th>秘聞</th>
-</tr>
-<tr>
-<td><b>逆旅的秘密1</b></td>
-<td><b>小時候在存書倉庫裡看過大量漫畫，其中也包括一些稀奇古怪的內容，對各類作品接受程度都很高，尤其是同伴推薦的，一定會看完。</b></td>
-</tr>
-<tr>
-<td><b>逆旅的秘密2</b></td>
-<td><b>為了有充足的背包空間來運轉物資，他曾把一本夾著梨花的漫畫留在了075號城市，灰鴉小隊也正是在此地調查時發現了它——後來，這本書被他取回，並在210號城市重傷時遺失了。</b></td>
-</tr>
-<tr>
-<td><b>逆旅的秘密3</b></td>
-<td><b>有時還會夢到過去的事，但現在的諾安已經能迅速清醒過來，因為在這個夢中，他手中的發條螢火蟲還完好如初。</b></td>
-</tr>
-<tr>
-<td><b>逆旅的秘密4</b></td>
-<td><b>曾為了活下去自學了很多技能，種類繁多到難以逐個列出，唯獨廚藝很生疏，因為他在成為構造體之前都沒什麼必要，也沒條件把食物做得好吃，現在只要有食譜參照就能做出還不錯的東西，只是有時還會下意識想去吃切下來的邊角料，不捨得浪費。</b></td>
-</tr>
-<tr>
-<td><b>逆旅的秘密5</b></td>
-<td><b>不知所措的時候會一本正經地說些奇怪的玩笑話來轉移話題，常常因為表情太過正經而讓對方覺得他是認真的。在說很離譜的玩笑前，諾安會下意識先說一句“告訴你個秘密吧”，但對方要是真的相信了，他又很快會解釋——如果還有這個機會。</b></td>
-</tr>
-<tr>
-<td><b>逆旅的秘密6</b></td>
-<td><b>曾被運輸隊的同伴們稱讚過很會安慰人，因此時不時會被邀請酒桌之間陪著借酒消愁的人談心——就算諾安從不喝酒，甚至有些討厭菸酒的味道，他也不會只因為這一點就離開一個需要幫助和陪伴的人。</b></td>
-</tr>
-<tr>
-<td><b>逆旅的秘密7</b></td>
-<td><b>不太擅長應對別人的眼淚也不太能分辨出對方是不是在假哭，遇到正在哭泣的人，雖然表面還能保持冷靜其實心裡會慌起來，並且不自覺地答應一些平時不會答應的請求。
-</b></td>
-</tr>
-<tr>
-<td><b>逆旅的秘密8</b></td>
-<td><b>如果有來世，諾安想變成海鷗。但其實在成為構造體之前，他既沒有見過海，也沒見過海鷗。</b></td>
-</tr>
-<tr>
-<td><b>逆旅的秘密9</b></td>
-<td><b>13歲之前在N列平民車廂是出了名的倔小孩，因為幾次魯莽的抗爭，被人在背後起了一個外號叫做“刺板栗”，但由於本人沒有見過板栗的刺殼也沒見過被板栗刺傷的人，根本沒察覺到是在叫他。</b></td>
-</tr>
-<tr>
-<td><b>逆旅的秘密10</b></td>
-<td><b>諾安對大部分顏色都沒有什麼偏好，但他喜歡某些白色且乾淨的東西，例如白色的紡織物，飛鳥自然脫落的白羽，晴天的雲，整潔的紙張......在這些潔白中，他唯獨不喜歡雪，尤其不喜歡一望無際的雪原。</b></td>
-</tr>
-<tr>
-<td><b>逆旅的秘密11</b></td>
-<td><b>雖然很容易親近，身為人類時也有很多要好的同伴，但感情深厚的朋友卻很少。對待感情有些遲鈍和被動，基本上不會在剛認識沒多久的時候就付出自己所有的衝動和熱情，熟悉對方的步調之後才會產生想要更接近對方的想法。</b></td>
-</tr>
-<tr>
-<td><b>逆旅的秘密12</b></td>
-<td><b>對關係好的同伴會坦率地訴說自己的真實感情，察覺到有些話會引起對方有趣的反應時，偶爾也想通過這些話來惡作劇，深知自己心底還留著孩子氣，但對朋友完全沒有遮掩這點的打算。</b></td>
-</tr>
+<tr><td>這樣的地方就存在於空中花園，就存在於這座人類最後的伊甸。</td></tr>
 </table>
 <h3>角色PV<a href="https://www.youtube.com/watch?v=5eRO7vcLq-U">腐朽為燈</a></h3>
 <script>
