--- a/Lanyin.html
+++ b/Lanyin.html
@@ -21,7 +21,7 @@ background-size:cover;
 <tr><td>到處都是難以用言語去描繪的浮華，這恐怕是存在於這個世界上的最後一個，同時也是最為夢幻的歌劇院。</td></tr>
 <tr><td>這樣的地方就存在於空中花園，就存在於這座人類最後的伊甸。</td></tr>
 <tr>
-<td><button type="button" onclick="document.getElementById('demo').style.display='block'">演員</button><b id="demo" style="display:none">再見了，我親愛的同胞。</b></td>	
+<td><button type="button" onclick="document.getElementById('demo').style.display='block'">演員<b id="demo" style="display:none">再見了，我親愛的同胞。</b></button><</td>	
 <tr>
 <tr>
 <td><b><button type="button" onclick="document.getElementById('z').style.display='block'">演員</button></b><b id="z" style="display:none">願你們的未來，充滿愛和光明。
