--- a/Lanyin.html
+++ b/Lanyin.html
@@ -5,7 +5,7 @@
 <style>
 body
 {
-background-image:url("se.jpeg");
+background-image:url("se.jpg");
 background-repeat:no-repeat;
 background-size:cover;
 }
@@ -22,12 +22,15 @@ background-size:cover;
 <tr><td>這樣的地方就存在於空中花園，就存在於這座人類最後的伊甸。</td></tr>
 <tr>
 <td><button type="button" onclick="document.getElementById('demo').style.display='block'">演員</button><b id="demo" style="display:none">再見了，我親愛的同胞。</td>	
-<tr>
+</tr>
 <tr>
 <td><b><button type="button" onclick="document.getElementById('z').style.display='block'">演員</button></b><b id="z" style="display:none">願你們的未來，充滿愛和光明。
 </b></td>	
-<tr>
-<tr><td>這樣的地方就存在於空中花園，就存在於這座人類最後的伊甸。</td></tr>
+</tr>
+<tr><td>扮演士兵的歌劇演員倒在了血泊之中，緩緩道出了最後一句台詞，對即將遠行的同胞們獻上了最誠摯的祝福，然後慢慢閉上了眼睛。</td></tr>
+<tr><td>隨著深紅色的絲絨簾子降落，歌劇《阿卡狄亞大撤退》就這樣落下了帷幕。隨著深紅色的絲絨簾子降落，歌劇《阿卡狄亞大撤退》就這樣落下了帷幕。</td></tr>
+<tr><td>燈光也依次全部暗了下來，座無虛席的歌劇院出現了短暫的寂靜。</td></tr>
+<tr><td>但是很快，一陣雷鳴般的喝彩，席捲了整個劇院。</td></tr>
 </table>
 <h3>角色PV<a href="https://www.youtube.com/watch?v=5eRO7vcLq-U">腐朽為燈</a></h3>
 <script>
