--- a/Lanyin.html
+++ b/Lanyin.html
@@ -20,17 +20,65 @@ background-size:cover;
 <tr><td>它只需要存在於那裡，就跟那些雕刻著《神曲》一幕幕畫面的立柱一樣，為這份極致的輝煌和壯闊添磚加瓦</td></tr>
 <tr><td>到處都是難以用言語去描繪的浮華，這恐怕是存在於這個世界上的最後一個，同時也是最為夢幻的歌劇院。</td></tr>
 <tr><td>這樣的地方就存在於空中花園，就存在於這座人類最後的伊甸。</td></tr>
-<tr>
-<td><button type="button" onclick="document.getElementById('demo').style.display='block'">演員</button><b id="demo" style="display:none">再見了，我親愛的同胞。</td>	
-</tr>
-<tr>
-<td><b><button type="button" onclick="document.getElementById('z').style.display='block'">演員</button></b><b id="z" style="display:none">願你們的未來，充滿愛和光明。
-</b></td>	
-</tr>
+<tr><td>演員:再見了，我親愛的同胞。</td></tr>
+<tr><td>演員:願你們的未來，充滿愛和光明。</td></tr>
 <tr><td>扮演士兵的歌劇演員倒在了血泊之中，緩緩道出了最後一句台詞，對即將遠行的同胞們獻上了最誠摯的祝福，然後慢慢閉上了眼睛。</td></tr>
 <tr><td>隨著深紅色的絲絨簾子降落，歌劇《阿卡狄亞大撤退》就這樣落下了帷幕。隨著深紅色的絲絨簾子降落，歌劇《阿卡狄亞大撤退》就這樣落下了帷幕。</td></tr>
 <tr><td>燈光也依次全部暗了下來，座無虛席的歌劇院出現了短暫的寂靜。</td></tr>
 <tr><td>但是很快，一陣雷鳴般的喝彩，席捲了整個劇院。</td></tr>
+<tr><td>衣冠楚楚的觀眾紛紛站了起來，為剛剛所見所聞的一切獻上了自己最熱烈的掌聲。</td></tr>
+<tr><td>緊接著，一束光輝刺破了黑暗，照亮了舞台。</td></tr>
+<tr><td>穹頂畫《末日審判》的正中央是一個空洞，人造的‘天光’正是從那傾瀉而入。</td></tr>
+<tr><td>它的光路不偏不倚，盡數落在了不知何時已然屹立於舞台中央的那名少女身上。</td></tr>
+<tr><td>她是這場歌劇當之無愧的靈魂人物，譜寫那篇堪稱人類讚歌的歌劇家——賽琳娜。</td></tr>
+<tr><td>她的神色有些恍惚，似乎是對眼前的一切不敢置信，那游離的目光依次掃過穹頂、壁畫、立柱，最後落到了觀眾席上。</td></tr>
+<tr><td>她似乎看見了什麼，因為她的目光在觸及到觀眾席上的一角時，觸電般地迅速收回了。</td></tr>
+<tr><td>但是她很快就調整好了自己的神情，朝在場的所有人行了一個挑不出任何錯誤的屈膝禮。</td></tr>
+<tr><td>沒有冗長的落幕台詞和致謝感言，她維持著那個姿勢很久很久，直到紛紛揚揚的金色亮片落下，直到所有觀眾都逐一退場。</td></tr>
+<tr><td>待最後一名觀眾離場，她直起了身，再次環視了眼四周，然後毫不猶豫地朝一個方向奔去。</td></tr>
+<tr><td>賽琳娜:請稍等一下</td></tr>
+<tr><td>被她呼喊聲喚住的那名構造體徐徐轉過了身，看向了她。</td></tr>
+<tr><td>不像其他觀眾那般，沒有鋥亮的皮鞋，沒有雪白的刺繡襯衣，更沒有得體的夜小禮服。</td></tr>
+<tr><td>站在她眼前的是個再普通不過的構造體，他穿著制式的構造體服裝，一切都和那個富麗堂皇的歌劇院格格不入。</td></tr>
+<tr><td>這是本場歌劇特邀的觀眾之一，除了普通的市民外，歌劇院偶爾會將部分門票贈送給軍隊那邊的士兵，以作嘉獎和慰問。</td></tr>
+<tr><td>在主創者賽琳娜的要求下，這場歌劇的少數票甚至被贈送給了一些構造體士兵。</td></tr>
+<tr><td>構造體:有事情?</td></tr>
+<tr><td>不存在尊稱，近乎粗魯的質問。</td></tr>
+<tr><td>彷彿站在他眼前的不是空中花園最年輕有為的歌劇家，而是一個無名小卒。</td></tr>
+<tr><td>賽琳娜:您對剛才那場表演有任何不滿的地方麼?</td></tr>
+<tr><td>構造體:我的看法竟然值得一名天才劇作家屈尊下問，難不成你們藝術家要關注每一名聽眾的反饋，直到每個人都異口同聲地稱讚你們？</td></tr>
+<tr><td>賽琳娜	我並沒有那個意思，我只是想知道您剛才為什麼沒有鼓掌。</td></tr>
+<tr><td>她很快就意識到自己現在脫口而出的話，在旁人聽來，似乎和剛才對方所說的，沒有本質不同，甚至更為高傲。</td></tr>
+<tr><td>於是她閉上了嘴，只是定定地看著對方的雙眼。</td></tr>
+<tr><td>構造體:為剛才那個意淫幻想出來的歌劇鼓掌?</td></tr>
+<tr><td>構造體發出了輕蔑的嗤笑聲。</td></tr>
+<tr><td>賽琳娜:您在笑什麼?</td></tr>
+<tr><td>構造體:我本以為軍隊給我的表彰獎勵是什麼好東西，沒想到是一張來這種鬼地方自取其辱的門票。</td></tr>
+<tr><td>構造體:現如今，那個取笑侮辱人的傢伙竟然還要站在我的跟前，問我為什麼要羞惱，沒有什麼比這更諷刺的了。</td></tr>
+<tr><td>賽琳娜:我不能理解您在說什麼，我並沒任何冒犯您的意思。</td></tr>
+<tr><td>構造體:你奉上的那出引以為豪的歌劇已經足夠冒犯了。</td></tr>
+<tr><td>賽琳娜:請告訴我，那場歌劇到底哪裡讓您心生不悅了?</td></tr>
+<tr><td>構造體:那我還想問你，你想通過那場歌劇表達什麼?</td></tr>
+<tr><td>構造體:謳歌英雄的無畏?還是讚揚戰爭的偉大?抑或是抒發自己對逝者居高臨下的悲憫和同情?</td></tr>
+<tr><td>賽琳娜:居高臨下的悲憫和同情……我並沒有……</td></tr>
+<tr><td>構造體:不要試圖狡辯，創作者的真實意圖總會在他們的作品中一覽無餘，我想你比我這個武夫更加明白這個道理。</td></tr>
+<tr><td>賽琳娜:我不確定，這就是為什麼我站在這裡，我希望得到您的意見。</td></tr>
+<tr><td>賽琳娜:我知道您是那場撤退的親身經歷者，我只是希望得到您的認同。</td></tr>
+<tr><td>士兵再次嗤笑了一聲。</td></tr>
+<tr><td>構造體:你問我為什麼不鼓掌?何不回去看看你所搭建的舞台?</td></tr>
+<tr><td>構造體:你想在金碧輝煌的歌劇院舞台上搭建出戰後的廢墟，於是你在石膏上雕刻出彈孔，用鑿子錘打出裂痕，我看得出你煞費苦心地佈置了這一切，讓它盡善盡美。</td></tr>
+<tr><td>構造體:是的，盡善盡美。</td></tr>
+<tr><td>構造體:那片廢墟太美了，你創造出的是帕特農神廟的斷壁殘垣，而不是戰後的廢墟。</td></tr>
+<tr><td></td></tr>
+<tr><td></td></tr>
+<tr><td></td></tr>
+<tr><td></td></tr>
+<tr><td></td></tr>
+<tr><td></td></tr>
+<tr><td></td></tr>
+<tr><td></td></tr>
+<tr><td></td></tr>
+<tr><td></td></tr>
 </table>
 <h3>角色PV<a href="https://www.youtube.com/watch?v=5eRO7vcLq-U">腐朽為燈</a></h3>
 <script>
