--- a/Lanyin.html
+++ b/Lanyin.html
@@ -69,16 +69,40 @@ background-size:cover;
 <tr><td>構造體:你想在金碧輝煌的歌劇院舞台上搭建出戰後的廢墟，於是你在石膏上雕刻出彈孔，用鑿子錘打出裂痕，我看得出你煞費苦心地佈置了這一切，讓它盡善盡美。</td></tr>
 <tr><td>構造體:是的，盡善盡美。</td></tr>
 <tr><td>構造體:那片廢墟太美了，你創造出的是帕特農神廟的斷壁殘垣，而不是戰後的廢墟。</td></tr>
-<tr><td></td></tr>
-<tr><td></td></tr>
-<tr><td></td></tr>
-<tr><td></td></tr>
-<tr><td></td></tr>
-<tr><td></td></tr>
-<tr><td></td></tr>
-<tr><td></td></tr>
-<tr><td></td></tr>
-<tr><td></td></tr>
+<tr><td>構造體:你不知道應該用於點綴那片廢墟的是烈火灼燒過的痕跡，是鮮血的斑駁，以及累累的殘肢斷臂……</td></tr>
+<tr><td>構造體:你的廢墟體面而乾淨，一如你腦海中蒼白的想像，僅此而已，與戰爭毫無關係。</td></tr>
+<tr><td>構造體:你以為在前線，世界還會像空中花園這樣有條不紊地運轉嗎?你的演出裡那場隆重的追悼會，在前線根本不可能出現。</td></tr>
+<tr><td>構造體:念悼詞、奏喪樂?我們連活人的哭聲都聽不過來，哪有時間去安慰死人?</td></tr>
+<tr><td>構造體:如果僅僅只這些形式般的東西，倒不至於讓我在這個地方大呼小叫。</td></tr>
+<tr><td>他忽然拔高了聲音，近乎質問。</td></tr>
+<tr><td>構造體:最後一幕，你到底想表達的是什麼?</td></tr>
+<tr><td>賽琳娜後退了一步。</td></tr>
+<tr><td>明明自己親手譜寫了那部歌劇的每一句台詞，明明那場歌劇才剛剛落幕，現在回想起來，她卻連方才一切的輪廓都記不清楚。</td></tr>
+<tr><td>只能隱隱地記得，自己最後讓留在地球上的士兵，瀕死之前，對已經離開地表的人們，獻上了祝福。</td></tr>
+<tr><td>了無遺憾的死亡、無悔的付出、對未來的祈願，那是她能想像得到的最體面而完美的謝幕。</td></tr>
+<tr><td>構造體:‘再見了，我親愛的同胞。 ’</td></tr>
+<tr><td>構造體:‘願你們的未來，充滿愛和光明。 ’</td></tr>
+<tr><td>士兵一字一頓地模仿著歌劇演員念台詞時的腔調，乃至抑揚頓挫，彷彿是在以此取笑她。</td></tr>
+<tr><td>構造體:這是我聽過最可笑的歌劇。</td></tr>
+<tr><td>構造體:聽聽，被逼無奈而接受死亡的棄子對一群逃離故土的懦夫獻上祝愿，這是什麼該死的新時代的笑話?還有比這更侮辱人的嗎?</td></tr>
+<tr><td>構造體:也只有像是你們這些生在空中花園的、養尊處優的人，才會寫出那樣可笑的‘喜劇’。</td></tr>
+<tr><td>構造體:給我聽好了，你在上演一出滑稽的、根本不該存在的、令人捧腹大笑的喜劇，你所敘述的一切，都是你的幻想。</td></tr>
+<tr><td>構造體:跟你不一樣，我經歷過那個時代，我摒棄了自己的肉體，摒棄了自己的人性，摒棄自己的尊嚴，才能換來生的機會，才獲得了站在這座伊甸上的門票。</td></tr>
+<tr><td>構造體:我成為了構造體，但是閉上眼睛，意識海中所能浮現的依然是往日亡靈的哀嚎。</td></tr>
+<tr><td>構造體:我的家人死在了地上，我沒能握住他們的手，但是我看見了他們最後的目光，其中絕對不存在所謂的祝福，只有恨意。</td></tr>
+<tr><td>構造體:被拋下的人只有憎恨，離開的人只有悔恨，這座伊甸誕生於仇恨和無數屍骸之上。</td></tr>
+<tr><td>構造體:在那場戰爭中，人只會跟畜生一樣，毫無意義地去死。</td></tr>
+<tr><td>構造體:沒有信仰，沒有榮譽，更不存在所謂的最後的諒解和祝福。</td></tr>
+<tr><td>構造體:有的只有無盡的仇恨和憤怒一該死的，我們為什麼要面對那一切，為什麼偏偏是我們站在了那裡，為什麼我們不得不被逼到那樣泯滅一切的境地?</td></tr>
+<tr><td>構造體:當有生力量化作冰冷的數字時，你才會理解什麼叫做戰爭的恐怖。</td></tr>
+<tr><td>構造體:當人連人都不能當的時候，你才會明白什麼叫做戰爭的無奈。</td></tr>
+<tr><td>構造體:我們捨棄了一切守衛的人民，卻像現在這樣心安理得地消費我們的苦難，來滿足自己自以為是的同理心和虛榮心。</td></tr>
+<tr><td>構造體:一個沒有見過地獄的人跟我這種趟過冥河之水的人，在這個地方謳歌戰爭與和平?她還站在我面前，問我為什麼不跟著鼓掌?</td></tr>
+<tr><td>構造體:我再也沒見過比那更傲慢的'謳歌'了，恕我先行離開，我能在這個地方體面而有禮地和你說話，已經傾盡了自己僅剩不多的所有教養。</td></tr>
+<tr><td>士兵沒有任何留戀地轉身離開，徒留下賽琳娜孤身一人，站在空曠的廣場上。</td></tr>
+<tr><td>她站在原地很久，臉上沒有分毫被侮辱後的羞憤，只是微微仰起頭，閉上了雙眼，最後深深地嘆了口氣。</td></tr>
+<tr><td>                                                                                   </td></tr>
+<tr><td>賽琳娜不知道自己是怎麼回到家中的。</td></tr>
 </table>
 <h3>角色PV<a href="https://www.youtube.com/watch?v=5eRO7vcLq-U">腐朽為燈</a></h3>
 <script>
