--- a/Lanyin.html
+++ b/Lanyin.html
@@ -8,6 +8,7 @@ body
 background-image:url("se.jpg");
 background-repeat:no-repeat;
 background-size:cover;
+background-attachment:fixed;
 }
 </style>
 </head>
