--- a/Lanyin.html
+++ b/Lanyin.html
@@ -102,10 +102,56 @@ background-attachment:fixed;
 <tr><td>構造體:我再也沒見過比那更傲慢的'謳歌'了，恕我先行離開，我能在這個地方體面而有禮地和你說話，已經傾盡了自己僅剩不多的所有教養。</td></tr>
 <tr><td>士兵沒有任何留戀地轉身離開，徒留下賽琳娜孤身一人，站在空曠的廣場上。</td></tr>
 <tr><td>她站在原地很久，臉上沒有分毫被侮辱後的羞憤，只是微微仰起頭，閉上了雙眼，最後深深地嘆了口氣。</td></tr>
-<tr><td>                                                                                   </td></tr>
 <tr><td>賽琳娜不知道自己是怎麼回到家中的。</td></tr>
+<tr><td>雙親正準備慶祝女兒第一部原創歌劇的成功出演。</td></tr>
+<tr><td>整個家庭都沉浸在了喜悅的氛圍中，只有她如同一座避世的孤島，牢牢地將自己圈閉在了房間裡。</td></tr>
+<tr><td>靜謐的房間裡，只有她的心跳聲躍動在鼓膜之上。</td></tr>
+<tr><td>那個土兵的言語反复在腦海裡浮現，一次又一次地按壓著她的心臟，讓她感覺到自己的胸腔快要炸裂了。</td></tr>
+<tr><td>想要找誰大聲傾訴，她知道自己的摯友艾拉必定願意接納這樣狼狽不堪的她。</td></tr>
+<tr><td>但是她又清楚明白著，這份痛處只能自己慢慢吞噬消化。</td></tr>
+<tr><td>賽琳娜:傲慢。</td></tr>
+<tr><td>賽琳娜:傲慢……</td></tr>
+<tr><td>她反复念叨著這個詞語，彷彿要用唇齒將它咀嚼殆盡，然後全部咽進</td></tr>
+<tr><td>賽琳娜閉上了眼睛。</td></tr>
+<tr><td>自己那個時候，到底為什麼會產生那樣漫長的恍惚呢?甚至忘卻了閉幕的感謝致辭。</td></tr>
+<tr><td>她想起來了——不是因為緊張，而是因為慚愧。</td></tr>
+<tr><td>審判的'天光'從穹頂傾瀉而入，所有人的罪孽在那光輝之下無處可遁，她在窺見穹頂上那幅《末日審判》時，就已經清楚知道了自己的罪。</td></tr>
+<tr><td>——紮根於自己骨子裡的傲慢。</td></tr>
+<tr><td>現在的她，終於知道了，自己為什麼無法回想起當時寫下那些臺本時的心境了。</td></tr>
+<tr><td>因為根本不存在，不存在所謂的心境，也不存在任何深沉的思考。</td></tr>
+<tr><td>這是她第一次不仰賴任何過去現有的劇本，自己撰寫的劇本，她自作主張地選擇了那個陌生的時代作為主體</td></tr>
+<tr><td>然後傲慢地描繪出了自己臆想中的人性光輝。</td></tr>
+<tr><td>早在撰寫的過程中，她就已經隱隱地意識到了不對，所以最後才會像是那樣，在收穫掌聲時，惴惴不安地站在舞台上。</td></tr>
+<tr><td>因為那些都不是自己應得的。</td></tr>
+<tr><td>在目光觸及到那位巍峨不動，僅僅只是坐在位置上，冰冷地環視著周圍起立鼓掌的構造體士兵時，那股惴惴不安終於化作慚愧，徹底爆發，將她的脊梁狠狠按下。</td></tr>
+<tr><td>慚愧到讓她久久不能抬頭。</td></tr>
+<tr><td>她從小熱愛著歌劇，熱愛著音樂，最初只能在小會展裡用機器人上演自己自編自導的歌劇，那時候的她，從未幻想過自己的歌劇有朝一日能夠被搬上真正的舞台，由真正的演員進行演繹。</td></tr>
+<tr><td>夢想成真本該是一件快樂的事情，但是站在舞台上接受讚美時，心中懷有的只有無盡的茫然和空虛。</td></tr>
+<tr><td>為什麼他們都在流淚?為什麼他們都在喝彩?他們到底從這空無一物的歌劇中受到了怎樣的感動?</td></tr>
+<tr><td>她根本不能理解，因為她什麼都沒有灌注進去。</td></tr>
+<tr><td>她還想了些什麼東西呢?</td></tr>
+<tr><td>對了……還有不可思議。</td></tr>
+<tr><td>真是不可思議，一牆之隔的外面是這個世界上最為先進的空中都市，內裡卻是這樣奢侈復古到極致的歌劇院。</td></tr>
+<tr><td>它滿足了現代的人類對古典和優雅的一切幻想，彷彿只要置身於這個劇院，他們就能窺視到那波瀾壯闊歷史的一角，呼吸到那個時代最後的餘香。</td></tr>
+<tr><td>物極必反大抵如此，時代越是進步，科技越是發達，人們就越拿復古當做高貴的象徵。</td></tr>
+<tr><td>稀缺罕見之物總是彌足珍貴——這條定律永不過時。正因為資源如此緊缺，所以將這樣有限的資源堆砌出來的華美之物才能夠這般的璀璨耀眼。</td></tr>
+<tr><td>她曾經是那樣嚮往著這個地方，那時卻只覺得一切華美之物都讓她感到難以言喻的心悸。</td></tr>
+<tr><td>在目光觸及立柱上有關神曲的浮雕時，她終於理解了，自己那時的心悸源於何處。</td></tr>
+<tr><td>她聽見了，藏匿於喝彩聲下的野獸的低嚎。</td></tr>
+<tr><td>是母狼、是獅子、是獵豹。</td></tr>
+<tr><td>那是她心中的獸。</td></tr>
+<tr><td>原來從那時開始，她便已經隱隱明白了蘊含在這些浮華背後的真實。</td></tr>
+<tr><td>最後的鞠躬並非感謝，而是一個'禱告'。</td></tr>
+<tr><td>不，那不是'禱告'，或者說，那不僅僅只是一個'禱告'。</td></tr>
+<tr><td>無關宗教禮法，那僅僅只是一個最虔誠的信徒，對最自己最純粹的信仰，所做出的最後的告別。</td></tr>
+<tr><td>然後她衝出了歌劇院，奔向了那個士兵。</td></tr>
+<tr><td>因為已經知道自己原罪的她，清楚他將會賜予自己最後的審判。</td></tr>
+<tr><td>手腕上的終端忽然亮起了熒光，思緒夏然而止。</td></tr>
+<tr><td>那是一封機密的郵件，自己在寫下這份劇本之前去做的測試，居然現在得到了回音。</td></tr>
+<tr><td>略過所有毫無意義的寒暄，賽琳娜波瀾不驚的目光定格在了最後的結論上。</td></tr>
+<tr><td>你和鉭-193共聚物相性程度良好，成為構造體手術的成功率最後被判定為高。</td></tr>
 </table>
-<h3>角色PV<a href="https://www.youtube.com/watch?v=5eRO7vcLq-U">腐朽為燈</a></h3>
+<h2><a href="https://www.youtube.com/watch?v=5eRO7vcLq-U">首頁</a><b href="https://www.youtube.com/watch?v=5eRO7vcLq-U">神曲</b></h2>
 <script>
 alert("繁星遙");
 </script>
