--- a/Lanyin1.html
+++ b/Lanyin1.html
@@ -151,7 +151,7 @@ background-attachment:fixed;
 <tr><td>略過所有毫無意義的寒暄，賽琳娜波瀾不驚的目光定格在了最後的結論上。</td></tr>
 <tr><td>你和鉭-193共聚物相性程度良好，成為構造體手術的成功率最後被判定為高。</td></tr>
 </table>
-<h2><a href="https://www.youtube.com/watch?v=5eRO7vcLq-U">首頁</a>    <a href="https://www.youtube.com/watch?v=5eRO7vcLq-U">神曲</a></h2>
+<h2><a href="https://dark-nighta.github.io/dark-nighta/Lanyin.html">首頁</a><a href="https://dark-nighta.github.io/dark-nighta/Lanyin2.html">神曲</a></h2>
 <script>
 alert("“圖蘭朵”");
 </script>
