--- a/Lanyin3.html
+++ b/Lanyin3.html
@@ -160,7 +160,7 @@ background-attachment:fixed;
 <tr><td>很久很久……</td></tr>
 <tr><td>久到臉上的淚水徹底乾涸。</td></tr>
 </table>
-<h2><a href="https://www.youtube.com/watch?v=5eRO7vcLq-U">“圖蘭朵”</a><a href="https://www.youtube.com/watch?v=5eRO7vcLq-U">首頁</a><a href="https://www.youtube.com/watch?v=5eRO7vcLq-U">暴風雨</a></h2>
+<h2><a href="https://dark-nighta.github.io/dark-nighta/Lanyin2.html">“神曲”</a><a href="https://dark-nighta.github.io/dark-nighta/Lanyin.html">首頁</a><a href="https://dark-nighta.github.io/dark-nighta/Lanyin4.html">暴風雨</a></h2>
 <script>
 alert("浮士德");
 </script>
