--- a/Lanyin4.html
+++ b/Lanyin4.html
@@ -120,7 +120,7 @@ background-attachment:fixed;
 <tr><td>科羅廖夫:看來，小偷沒有把贓物藏在自己的左手上。</td></tr>
 <tr><td>科羅廖夫:那麼接下來，開始檢查，別的地方。</td></tr>
 </table>
-<h2><a href="https://www.youtube.com/watch?v=5eRO7vcLq-U">“浮士德”</a><a href="https://www.youtube.com/watch?v=5eRO7vcLq-U">首頁</a><a href="https://www.youtube.com/watch?v=5eRO7vcLq-U">收場詩</a></h2>
+<h2><a href="https://dark-nighta.github.io/dark-nighta/Lanyin3.html">“浮士德”</a><a href="https://dark-nighta.github.io/dark-nighta/Lanyin.html">首頁</a><a href="https://dark-nighta.github.io/dark-nighta/Lanyin5.html">收場詩</a></h2>
 <script>
 alert("暴風雨");
 </script>
