--- a/Lanyin5.html
+++ b/Lanyin5.html
@@ -125,7 +125,7 @@ background-attachment:fixed;
 <tr><td>——它能把慈悲的神明的中心刺徹，赦免了可憐的下民的一切過失。</td></tr>
 <tr><td>——你們有罪過希望別人不再追究，願你們也格外寬大，給我以自由。</td></tr>
 </table>
-<h2><a href="https://www.youtube.com/watch?v=5eRO7vcLq-U">“暴風雨”</a><a href="https://www.youtube.com/watch?v=5eRO7vcLq-U">首頁</a><a href="https://www.youtube.com/watch?v=5eRO7vcLq-U">天真的預言</a></h2>
+<h2><a href="https://dark-nighta.github.io/dark-nighta/Lanyin4.html">“暴風雨”</a><a href="https://dark-nighta.github.io/dark-nighta/Lanyin.html">首頁</a><a href="https://dark-nighta.github.io/dark-nighta/Lanyin6.html">天真的預言</a></h2>
 <script>
 alert("收場詩");
 </script>
