--- a/Lanyin6.html
+++ b/Lanyin6.html
@@ -113,7 +113,7 @@ background-attachment:fixed;
 <tr><td>——對於生活在白晝中的人，</td></tr>
 <tr><td>——神化作人性。</td></tr>
 </table>
-<h2><a href="https://www.youtube.com/watch?v=5eRO7vcLq-U">“收場詩”</a><a href="https://www.youtube.com/watch?v=5eRO7vcLq-U">首頁</a></h2>
+<h2><a href="https://dark-nighta.github.io/dark-nighta/Lanyin5.html">“收場詩”</a><a href="https://dark-nighta.github.io/dark-nighta/Lanyin.html">首頁</a></h2>
 <script>
 alert("天真的預言");
 </script>
